--- a/index.html
+++ b/index.html
@@ -104,24 +104,24 @@
       </section>
 
       <section class="Members">
-        <h1 class="header">Members</h1>
+        <h1 class="headers">Members</h1>
         
-        <div class="parts">
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-          <img src="" alt="" />
-        </div>
-      </section>
+        <div class="scroller" data-direction="right" data-speed="slow">
+          <div class="scroller__inner">
+            <img src="assets/Members/ADU.png" alt="" />
+            <img src="assets/Members/Dalta.png" alt="" />
+            <img src="assets/Members/Faith.png" alt="" />
+            <img src="assets/Members/header-logo.png" alt="" />
+            <img src="assets/Members/Jonelta.png" alt="" />
+            <img src="assets/Members/LETRAN.png" alt="" />
+            <img src="assets/Members/MC.png" alt="">
+            <img src="assets/Members/NCBA.png" alt="">
+            <img src="assets/Members/PHILBEST.png" alt="">
+            <img src="assets/Members/SACLI.png" alt="">
+            <img src="assets/Members/SDC.png" alt="">
+            <img src="assets/Members/SPC.png" alt="">
+            <img src="assets/Members/UBlogo.png" alt="">
+          </div>
     </main>
 
     <script src="/src/script/main.js"></script>
