Finalized the Officers List

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="contents">
           <div class="details">
             <h1>University, College &amp; School Registars Association</h1>
-            <p>
+            <p class="introduction">
               The Associtiation of Registar's Members around Region IV-A.
               Founding the organization's main objective is to establish an
               effective, fastest and easiest way of sending, transmitting papers
@@ -108,19 +108,19 @@
         
         <div class="scroller" data-direction="right" data-speed="slow">
           <div class="scroller__inner">
-            <img src="assets/Members/ADU.png" alt="" />
-            <img src="assets/Members/Dalta.png" alt="" />
-            <img src="assets/Members/Faith.png" alt="" />
-            <img src="assets/Members/header-logo.png" alt="" />
-            <img src="assets/Members/Jonelta.png" alt="" />
-            <img src="assets/Members/LETRAN.png" alt="" />
-            <img src="assets/Members/MC.png" alt="">
-            <img src="assets/Members/NCBA.png" alt="">
-            <img src="assets/Members/PHILBEST.png" alt="">
-            <img src="assets/Members/SACLI.png" alt="">
-            <img src="assets/Members/SDC.png" alt="">
-            <img src="assets/Members/SPC.png" alt="">
-            <img src="assets/Members/UBlogo.png" alt="">
+            <img src="assets/school-members/ADU.png" alt="" />
+            <img src="assets/school-members/Dalta.png" alt="" />
+            <img src="assets/school-members/Faith.png" alt="" />
+            <img src="assets/school-members/header-logo.png" alt="" />
+            <img src="assets/school-members/Jonelta.png" alt="" />
+            <img src="assets/school-members/LETRAN.png" alt="" />
+            <img src="assets/school-members/MC.png" alt="">
+            <img src="assets/school-members/NCBA.png" alt="">
+            <img src="assets/school-members/PHILBEST.png" alt="">
+            <img src="assets/school-members/SACLI.png" alt="">
+            <img src="assets/school-members/SDC.png" alt="">
+            <img src="assets/school-members/SPC.png" alt="">
+            <img src="assets/school-members/UBlogo.png" alt="">
           </div>
     </main>
 
