--- a/src/pages/officers.html
+++ b/src/pages/officers.html
@@ -9,6 +9,7 @@
     </title>
     <link rel="icon" type="x-icon" href="/assets/logo/Logo.png" />
     <link rel="stylesheet" href="/src/main.css" />
+    <link rel="stylesheet" href="/src/styles/officers.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -24,7 +25,6 @@
     />
   </head>
 
- 
   <header>
     <nav class="navbar">
       <div class="logo">
@@ -39,8 +39,9 @@
           <a href="" class="nav-links">Gallery</a>
         </li>
 
-        <li class="nav-items subs">About
-          
+        <li class="nav-items subs">
+          About
+
           <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
           <div class="sub-menu">
             <ul class="submenu">
@@ -81,7 +82,223 @@
 
   <body>
     <main>
-        
+      <div style="width: 100%; height: 130px"></div>
+      <section class="Officers">
+        <div class="info">
+          <h1 class="header">List of Officers</h1>
+          <h4>AY 2023-2024</h4>
+        </div>
+
+        <div class="all-members"></div>
+
+        <div class="members">
+          <div class="member">
+            <div class="member-img">
+              <img src="/assets/member/GENOTA_ELOISA.JPG" alt="" class="imgs" />
+            </div>
+
+            <h3>ELOISA A. GENOTA</h3>
+            <p class="position">President</p>
+            <p class="schools">
+              Colegio De San Juan De Letran Calamba <br>Bucal, Calamba City,
+              Laguna
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img
+                src="/assets/member/CUEVAS, NENITA.png"
+                alt=""
+                class="imgs"
+              />
+            </div>
+
+            <h3>NENITA E. CUEVAS</h3>
+            <p class="position">Vice President</p>
+            <p class="schools">University of Batangas, <br />Batangas City</p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img
+                src="/assets/member/TANYAG, REMINA L.png"
+                alt=""
+                class="imgs"
+              />
+            </div>
+
+            <h3>REMINA L. TANYAG</h3>
+            <p class="position">Secretary</p>
+            <p class="schools">
+              University of Perpetual Help System Laguna <br />Sto. Niño, City
+              of Biñan, Laguna
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img
+                src="/assets/member/GEVAÑA, SHERRYL M.jpg"
+                alt=""
+                class="imgs"
+              />
+            </div>
+
+            <h3>SHERRYL M. GEVAÑA</h3>
+            <p class="position">Asst. Secretary</p>
+            <p class="schools">
+              First Asia Institute of Technology and Humanities <br />
+              2 Pres. Laurel Highway, Darasa Tanauan City Batangas
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img src="/assets/member/MARANA_MYRA.jpg" alt="" class="imgs" />
+            </div>
+
+            <h3>MYRA A. MARAÑA</h3>
+            <p class="position">Treasurer</p>
+            <p class="schools">
+              University of Perpetual Help System Dalta-Calamba Campus
+              Brgy. Paciano Rizal, Calamba City, Laguna
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img
+                src="/assets/member/DE GUZMAN, ROSENDA.jpg"
+                alt=""
+                class="imgs"
+              />
+            </div>
+
+            <h3>ROSENDA P. DE GUZMAN</h3>
+            <p class="position">Asst. Treasurer</p>
+            <p class="schools">St. Anne College Lucena, Inc. Lucena City</p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img
+                src="/assets/member/PALAYAG, RODSEN.jpg"
+                alt=""
+                class="imgs"
+              />
+            </div>
+
+            <h3>RODSEN P. PALAYAG</h3>
+            <p class="position">Auditor</p>
+            <p class="schools">
+              Maryhill College Ml. Tagarao Street, Lucena City
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img
+                src="/assets/member/VILLANUEVA, RONEO.jpg"
+                alt=""
+                class="imgs"
+              />
+            </div>
+
+            <h3>RONEO C. VILLANUEVA</h3>
+            <p class="position">PRO</p>
+            <p class="schools">
+              San Pablo Colleges Hermanos Belen St., <br />Brgy,.Iii-A, San
+              Pablo City, 4000, Laguna
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img src="/assets/member/UY, ROBERT.jpeg" alt="" class="imgs" />
+            </div>
+
+            <h3>ROBERT G. UY</h3>
+            <p class="position">Board of Director</p>
+            <p class="schools">
+              Philippine Best Training Systems Colleges Inc. 530 Manila East
+              Road Macamot, Binangonan, Rizal
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img src="/assets/member/KALINAWAN_SUE.jpg" alt="" class="imgs" />
+            </div>
+
+            <h3>SUE S. KALINAWAN</h3>
+            <p class="position">Board of Director</p>
+            <p class="schools">
+              St. Dominic College of Asia Talaba 4, Bacoor City, Cavite
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img
+                src="/assets/member/ESGUERRA_TEOFILO_JR.jpg"
+                alt=""
+                class="imgs"
+              />
+            </div>
+
+            <h3>TEOFILO C. ESGUERRA JR</h3>
+            <p class="position">Board of Director</p>
+            <p class="schools">
+              Adventist University of The Philippines Puting Kahoy, Silang,
+              Cavite
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img src="/assets/member/CAMACHO_ALVIN.png" alt="" class="imgs" />
+            </div>
+
+            <h3>ALVIN E. CAMACHO</h3>
+            <p class="position">Board of Director</p>
+            <p class="schools">
+              University of Perpetual Help System GMA Campus San Gabriel GMA
+              Cavite
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img src="/assets/member/PASION_JOANNE.png" alt="" class="imgs" />
+            </div>
+
+            <h3>JOANNE C. PASION</h3>
+            <p class="position">Board of Director</p>
+            <p class="schools">
+              World Citi Colleges 156 M.L. Quezon Avenue <br>Brgy. San Roque
+              Antipolo City,1870
+            </p>
+          </div>
+
+          <div class="member">
+            <div class="member-img">
+              <img
+                src="/assets/member/UBER, MARIFLOR.png"
+                alt=""
+                class="imgs"
+              />
+            </div>
+
+            <h3>MARIFLOR M. UBER</h3>
+            <p class="position">Board of Director</p>
+            <p class="schools">
+              National College of Business and Arts Ilog Pugad, Barangay San
+              Juan, Taytay, Rizal
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="/src/script/main.js"></script>
