Added a responsive breakline

--- a/src/pages/officers.html
+++ b/src/pages/officers.html
@@ -221,7 +221,7 @@
             <h3>ROBERT G. UY</h3>
             <p class="position">Board of Director</p>
             <p class="schools">
-              Philippine Best Training Systems Colleges Inc. 530 Manila East
+              Philippine Best Training Systems Colleges Inc. <br>530 Manila East
               Road Macamot, Binangonan, Rizal
             </p>
           </div>
@@ -234,7 +234,7 @@
             <h3>SUE S. KALINAWAN</h3>
             <p class="position">Board of Director</p>
             <p class="schools">
-              St. Dominic College of Asia Talaba 4, Bacoor City, Cavite
+              St. Dominic College of Asia Talaba 4, <br>Bacoor City, Cavite
             </p>
           </div>
 
@@ -263,7 +263,7 @@
             <h3>ALVIN E. CAMACHO</h3>
             <p class="position">Board of Director</p>
             <p class="schools">
-              University of Perpetual Help System GMA Campus San Gabriel GMA
+              University of Perpetual Help System <br>GMA Campus San Gabriel GMA
               Cavite
             </p>
           </div>
@@ -293,7 +293,7 @@
             <h3>MARIFLOR M. UBER</h3>
             <p class="position">Board of Director</p>
             <p class="schools">
-              National College of Business and Arts Ilog Pugad, Barangay San
+              National College of Business and Arts Ilog <br>Pugad, Barangay San
               Juan, Taytay, Rizal
             </p>
           </div>
