Added a Members on the Navigation

--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
                   >Officers</a
                 >
               </li>
+              <li class="nav-items">
+                <a href="/src/pages/members.html" class="nav-links"
+                  >Members</a
+                >
+              </li>
             </ul>
           </div>
         </li>
