--- a/src/pages/contact-us.html
+++ b/src/pages/contact-us.html
@@ -33,7 +33,7 @@
 
       <ul class="navlist">
         <li class="nav-items">
-          <a href="/index.html" class="nav-links">Home</a>
+          <a href="#Hero" class="nav-links">Home</a>
         </li>
         <li class="nav-items">
           <a href="" class="nav-links">Gallery</a>
@@ -60,6 +60,11 @@
               <li class="nav-items">
                 <a href="/src/pages/officers.html" class="nav-links"
                   >Officers</a
+                >
+              </li>
+              <li class="nav-items">
+                <a href="/src/pages/members.html" class="nav-links"
+                  >Members</a
                 >
               </li>
             </ul>
