--- a/src/pages/history.html
+++ b/src/pages/history.html
@@ -34,14 +34,14 @@
 
       <ul class="navlist">
         <li class="nav-items">
-          <a href="/index.html" class="nav-links">Home</a>
+          <a href="#Hero" class="nav-links">Home</a>
         </li>
         <li class="nav-items">
           <a href="" class="nav-links">Gallery</a>
         </li>
 
-        <li class="nav-items subs">About
-          
+        <li class="nav-items subs">
+          About
           <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
           <div class="sub-menu">
             <ul class="submenu">
@@ -61,6 +61,11 @@
               <li class="nav-items">
                 <a href="/src/pages/officers.html" class="nav-links"
                   >Officers</a
+                >
+              </li>
+              <li class="nav-items">
+                <a href="/src/pages/members.html" class="nav-links"
+                  >Members</a
                 >
               </li>
             </ul>
