--- a/src/pages/resources.html
+++ b/src/pages/resources.html
@@ -28,19 +28,19 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href=""><img src="/assets/logo/Logo.png" alt="UCSRA Logo" /></a>
+        <a href="/index.html"><img src="/assets/logo/Logo.png" alt="" /></a>
       </div>
 
       <ul class="navlist">
         <li class="nav-items">
-          <a href="/index.html" class="nav-links">Home</a>
+          <a href="#Hero" class="nav-links">Home</a>
         </li>
         <li class="nav-items">
           <a href="" class="nav-links">Gallery</a>
         </li>
 
-        <li class="nav-items subs">About
-          
+        <li class="nav-items subs">
+          About
           <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
           <div class="sub-menu">
             <ul class="submenu">
@@ -60,6 +60,11 @@
               <li class="nav-items">
                 <a href="/src/pages/officers.html" class="nav-links"
                   >Officers</a
+                >
+              </li>
+              <li class="nav-items">
+                <a href="/src/pages/members.html" class="nav-links"
+                  >Members</a
                 >
               </li>
             </ul>
@@ -322,45 +327,45 @@
               </li>
               <li class="reports">
                 <a
-                  href="/assets/resources/32nd Regional Convention/CHED Update.pdf"
+                  href="/assets/resources/31st Regional Convention/CHED-Endorsement-1.pdf"
                   >CHED Endorsement</a
                 >
               </li>
 
               <li class="reports">
                 <a
-                  href="/assets/resources/32nd Regional Convention/School Registar's Issues & Concerns on SHS Implementation.pdf"
+                  href="/assets/resources/31st Regional Convention/CMO-13-s.-2014-presentation-by-Dr.-Yanga.pdf"
                   >CMO 13 s. 2014 presentation by Dr. Yanga</a
                 >
               </li>
               <li class="reports">
                 <a
-                  href="/assets/resources/32nd Regional Convention/DPA 2012 AN UPDATE ON POLICIES AND LEGISLATIONS ON EDUCATION AND SCHOOL ADMINISTRATION.pdf"
+                  href="/assets/resources/31st Regional Convention/letter-for-HEIs.pdf"
                   >Letter to HEI’s
                 </a>
               </li>
               <li class="reports">
                 <a
-                  href="/assets/resources/32nd Regional Convention/DPA 2012 AN UPDATE ON POLICIES AND LEGISLATIONS ON EDUCATION AND SCHOOL ADMINISTRATION.pdf"
+                  href="/assets/resources/31st Regional Convention/PEAC-FAPE-Updates-by-Dr.-Ferrer.pdf"
                   >PEAC-FAPE Updates by Dr. Ferrer</a
                 >
               </li>
               <li class="reports">
                 <a
-                  href="/assets/resources/32nd Regional Convention/Letter to Hei's.pdf"
+                  href="/assets/resources/31st Regional Convention/pre-registration-form-1.pdf"
                   >Pre-Registration Form</a
                 >
               </li>
               <li class="reports">
                 <a
-                  href="/assets/resources/32nd Regional Convention/School Registar's Issues & Concerns on SHS Implementation.pdf"
+                  href="/assets/resources/31st Regional Convention/Quality-Policy-Formation-by-Dr.-Maningas.pdf"
                   >Quality Policy Formation by Dr. Maningas</a
                 >
               </li>
 
               <li class="reports">
                 <a
-                  href="/assets/resources/32nd Regional Convention/Program of Activites.pdf"
+                  href="/assets/resources/31st Regional Convention/tentative-program.pdf"
                   >Tentative Program</a
                 >
               </li>
@@ -373,7 +378,7 @@
             <ul class="report-list">
               <li class="reports">
                 <a
-                  href="/assets/resources/5th Convention/CHED Endorsement and Program.pdf"
+                  href="/assets/resources"
                   >CHED Endorsement and Program</a
                 >
               </li>
