--- a/src/pages/gallery.html
+++ b/src/pages/gallery.html
@@ -28,20 +28,19 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <img src="/assets/logo/Logo.png" alt="" />
+        <a href="/index.html"><img src="/assets/logo/Logo.png" alt="" /></a>
       </div>
 
       <ul class="navlist">
         <li class="nav-items">
-          <a href="/index.html" class="nav-links">Home</a>
+          <a href="#Hero" class="nav-links">Home</a>
         </li>
         <li class="nav-items">
           <a href="" class="nav-links">Gallery</a>
         </li>
 
         <li class="nav-items subs">
-          <label for="abt-checkbox">About</label>
-          <input type="checkbox" id="abt-checkbox" />
+          About
           <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
           <div class="sub-menu">
             <ul class="submenu">
@@ -61,6 +60,11 @@
               <li class="nav-items">
                 <a href="/src/pages/officers.html" class="nav-links"
                   >Officers</a
+                >
+              </li>
+              <li class="nav-items">
+                <a href="/src/pages/members.html" class="nav-links"
+                  >Members</a
                 >
               </li>
             </ul>
