Added a New Set of Images

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="/index.html"><img src="/assets/logo/Logo.png" alt="" /></a>
+        <a href="/index.html"><img src="/assets/logo/NewLogo.png" alt="" /></a>
       </div>
 
       <ul class="navlist">
@@ -108,7 +108,7 @@
         </div>
       </section>
 
-      <section class="Members">
+      <!-- <section class="Members">
         <h1 class="headers">Members</h1>
         
         <div class="scroller" data-direction="right" data-speed="slow">
@@ -126,7 +126,14 @@
             <img src="assets/school-members/SDC.png" alt="">
             <img src="assets/school-members/SPC.png" alt="">
             <img src="assets/school-members/UBlogo.png" alt="">
+          </div> 
+          </section> -->
+
+        <section class="Banner">
+          <div class="banner-img">
+            <img src="/assets/banner/banner.png" alt="">
           </div>
+        </section>
     </main>
 
     <script src="/src/script/main.js"></script>
