--- a/src/pages/misvis.html
+++ b/src/pages/misvis.html
@@ -30,12 +30,12 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="/index.html"><img src="/assets/logo/Logo.png" alt="" /></a>
+        <a href="/index.html"><img src="/assets/logo/NewLogo.png" alt="" /></a>
       </div>
 
       <ul class="navlist">
         <li class="nav-items">
-          <a href="#Hero" class="nav-links">Home</a>
+          <a href="/index.html" class="nav-links">Home</a>
         </li>
         <li class="nav-items">
           <a href="" class="nav-links">Gallery</a>
@@ -88,7 +88,7 @@
 
   <body>
     <main>
-      <div style="width:100%; height: 120px;"></div>
+      <div style="width:100%; height: 150px;"></div>
 
       <section class="MisVis">
         <div class="container">
