--- a/src/pages/members.html
+++ b/src/pages/members.html
@@ -28,12 +28,12 @@
   <header>
     <nav class="navbar">
       <div class="logo">
-        <a href="/index.html"><img src="/assets/logo/Logo.png" alt="" /></a>
+        <a href="/index.html"><img src="/assets/logo/NewLogo.png" alt="" /></a>
       </div>
 
       <ul class="navlist">
         <li class="nav-items">
-          <a href="#Hero" class="nav-links">Home</a>
+          <a href="/index.html" class="nav-links">Home</a>
         </li>
         <li class="nav-items">
           <a href="" class="nav-links">Gallery</a>
