--- a/index.html
+++ b/index.html
@@ -62,9 +62,7 @@
                 >
               </li>
               <li class="nav-items">
-                <a href="/src/pages/members.html" class="nav-links"
-                  >Members</a
-                >
+                <a href="/src/pages/members.html" class="nav-links">Members</a>
               </li>
             </ul>
           </div>
@@ -91,13 +89,17 @@
           <div class="details">
             <h1>University, College &amp; School Registars Association</h1>
             <p class="introduction">
-              The Associtiation of Registar's Members around Region IV-A.
-              Founding the organization's main objective is to establish an
-              effective, fastest and easiest way of sending, transmitting papers
-              and other documents from DECS IV-HED to Higher Education
-              Institutions in the Region.
+              The University, College, and School Registrars Association
+              (UCSRA), Inc. is the official association of the registrars and
+              records personnel in Region IVA. The UCSRA is a vital organization
+              that empowers professionals working in registrar offices to excel
+              in their roles. By fostering collaboration, providing educational
+              resources, and advocating for service excellence, UCSRA plays a
+              crucial part in ensuring the effective administration of
+              educational institutions regarding student records management.
             </p>
             <div class="more">
+             
               <a href="/src/pages/history.html">More About Us</a>
             </div>
           </div>
@@ -129,7 +131,26 @@
           </div> 
           </section> -->
 
+      <section class="Registration">
 
+       <div class="containers">
+
+        <div class="informations">
+          <h2>Registration is Now Open!</h2>
+          <h3>10th Registar's Forum</h3>
+          <p>December 6, 2023</p>
+          <p>Performing Arts Theater</p>
+          <p class="perps">University of Perpetual Help System Laguna</p>
+          <div class="regnow">
+            <a href="" class="button">Register Now!</a>
+          </div>
+        </div>
+
+        <div class="imgs">
+          <img src="/assets/banner/Step-1-Registration-1-982x1024.png" alt="">
+        </div>
+       </div>
+      </section>
     </main>
 
     <script src="/src/script/main.js"></script>
