--- a/src/pages/members.html
+++ b/src/pages/members.html
@@ -123,8 +123,8 @@
           <div class="close-imgs"></div>
           <img src="" alt="" />
 
-          <button class="carousel prev">&#8656;</button>
-          <button class="carousel next">&#8658;</button>
+          <button class="carousel prev"><i class="fa-solid fa-arrow-left fa-sm"></i></button>
+          <button class="carousel next"><i class="fa-solid fa-arrow-right fa-sm"></i></button>
         </div>
       </section>
     </main>
