Added a contacts to all pages

--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
                 href="https://forms.gle/2imvCupc6CjuKMpM8"
                 class="registern"
                 target="_blank"
-                ><span>Register Now!</span></a
+                ><span style="color:white">Register Now!</span></a
               >
-              <a href="/src/pages/history.html">More&nbsp;About&nbsp;Us</a>
+              <a href="/src/pages/history.html" >More&nbsp;About&nbsp;Us</a>
             </div>
           </div>
         </div>
@@ -115,7 +115,7 @@
 
       <section class="Registration min-height">
         <div class="containers">
-          <div class="informations">
+          <div class="infor">
             <h2>Registration is Now Open!</h2>
             <h3>10th Registar's Forum</h3>
             <p class="one">December 6, 2023</p>
@@ -126,7 +126,7 @@
                 href="https://forms.gle/2imvCupc6CjuKMpM8"
                 class="button"
                 target="_blank"
-                >Register Now!</a
+                ><span class="text" style="color:white">Register Now!</span></a
               >
             </div>
           </div>
