--- a/src/pages/history.html
+++ b/src/pages/history.html
@@ -222,7 +222,29 @@
         </div>
       </section>
     </main>
+    <footer>
+      <section class="footer">
+        <div class="main-element">
+          <div class="contacts">
+            <h1>Contact Us</h1>
+            <p>We Can Help</p>
+            <p>our team of experts is on hand to</p>
+            <p>answers your questionss</p>
+          </div>
 
+          <div class="numbers">
+            <p>Telephone No. (049) 545 5453</p>
+
+            <span>Facebook: </span
+            ><a href="">College &amp; School Registars Association</a>
+            <span>Email Address: </span
+            ><a href="mailto: ucsra.inc@gmail.com"
+              >College &amp; School Registars Association</a
+            >
+          </div>
+        </div>
+      </section>
+    </footer>
     <script src="/src/script/main.js"></script>
   </body>
 </html>
