--- a/src/pages/contact-us.html
+++ b/src/pages/contact-us.html
@@ -9,6 +9,7 @@
     </title>
     <link rel="icon" type="x-icon" href="/assets/logo/Logo.png" />
     <link rel="stylesheet" href="/src/main.css" />
+    <link rel="stylesheet" href="/src/styles/contact.css">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
@@ -86,7 +87,28 @@
 
   <body>
     <main>
-        
+      <div style="width: 100%; height:150px"></div>
+      <section class="foot">
+        <div class="main-elem">
+          <div class="contacts">
+            <h1>Contact Us</h1>
+            <p>We Can Help</p>
+            <p>our team of experts is on hand to</p>
+            <p>answers your questionss</p>
+          </div>
+
+          <div class="numbers">
+            <p>Telephone No. (049) 545 5453</p>
+
+            <span>Facebook: </span
+            ><a href="">College &amp; School Registars Association</a>
+            <span>Email Address: </span
+            ><a href="mailto: ucsra.inc@gmail.com"
+              >College &amp; School Registars Association</a
+            >
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="/src/script/main.js"></script>
