--- a/index.html
+++ b/index.html
@@ -354,11 +354,11 @@
             ><a
               href="https://www.facebook.com/profile.php?id=100068724562502"
               target="_blank"
-              >USCRA - University, College, and School Registrars Association
+              ><i class="fa-brands fa-facebook fa-lg"></i> USCRA - University, College, and School Registrars Association
               Inc.</a
             >
             <span>Email Address: </span
-            ><a href="mailto: ucsra.inc@gmail.com">ucsra.inc@gmail.com</a>
+            ><a href="mailto: ucsra.inc@gmail.com"><i class="fa-solid fa-envelope fa-lg"></i> ucsra.inc@gmail.com</a>
           </div>
         </div>
       </section>
