Fixed the Size of Registration

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
       <section class="Registration min-height">
         <div class="containers">
-          <div class="infor">
+          <div class="infor" style="padding-bottom: 250px">
             <h2>Registration is Now Open!</h2>
             <h3>10th Registar's Forum</h3>
             <p class="one">December 6, 2023</p>
@@ -170,7 +170,7 @@
           <div class="vision">
             <h3 class="intro">Vision</h3>
             <p>
-              Providing a holistic eevelopment avenue for School Registars &amp;
+              Providing a holistic eevelopment avenue for School Registars and
               Records Personnel
             </p>
             <div class="logos">
@@ -354,11 +354,13 @@
             ><a
               href="https://www.facebook.com/profile.php?id=100068724562502"
               target="_blank"
-              ><i class="fa-brands fa-facebook fa-lg"></i> USCRA - University, College, and School Registrars Association
-              Inc.</a
+              ><i class="fa-brands fa-facebook fa-lg"></i> USCRA - University,
+              College, and School Registrars Association Inc.</a
             >
             <span>Email Address: </span
-            ><a href="mailto: ucsra.inc@gmail.com"><i class="fa-solid fa-envelope fa-lg"></i> ucsra.inc@gmail.com</a>
+            ><a href="mailto: ucsra.inc@gmail.com"
+              ><i class="fa-solid fa-envelope fa-lg"></i> ucsra.inc@gmail.com</a
+            >
           </div>
         </div>
       </section>
