Fixed the Size of Registration

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
       <section class="Registration min-height">
         <div class="containers">
-          <div class="infor" style="padding-bottom: 250px">
+          <div class="infor" >
             <h2>Registration is Now Open!</h2>
             <h3>10th Registar's Forum</h3>
             <p class="one">December 6, 2023</p>
