Adjusting the Reponsive size

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <li class="nav-items">
           <a href="#Hero" class="nav-links">Home</a>
         </li>
+
         <li class="nav-items subs">
           About
           <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
@@ -77,13 +78,35 @@
           </div>
         </li>
 
-        <li class="nav-items">
-          <a href="" class="nav-links">Annoucements</a>
+        <li class="nav-items subs">
+         Annoucements
+          <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
+          <div class="sub-menu">
+            <ul class="submenu">
+              <li class="nav-items">
+                <a href="/src/pages/history.html" class="nav-links">Events</a>
+              </li>
+            
+            </ul>
+          </div>
         </li>
 
-        <li class="nav-items">
-          <a href="" class="nav-links">Resources</a>
-        </li>
+        <li class="nav-items subs">
+          Resources
+           <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
+           <div class="sub-menu">
+             <ul class="submenu">
+               <li class="nav-items">
+                 <a href="/src/pages/history.html" class="nav-links">Gallery</a>
+               </li>
+               <li class="nav-items">
+                <a href="/src/pages/history.html" class="nav-links">Archive</a>
+              </li>
+             </ul>
+           </div>
+         </li>
+         
+
         <li class="nav-items">
           <a href="/src/pages/contact-us.html" class="nav-links">Contact Us</a>
         </li>
