--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Clark Leovison C. Rey, Jerome Evangelista" />
+    <meta name="description" content="USCRA, University,College and School Registars Association">
     <title>
       University, College &amp; School Registars Association | UCSRA
     </title>
