Added Individual Downloadable Letters On Nav

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
               <li class="nav-items">
                 <a href="/src/pages/history.html" class="nav-links">Events</a>
               </li>
+              <li class="nav-items">
+                <a href="/src/pages/history.html" class="nav-links">Individual Downloadable Letters</a>
+              </li>
             
             </ul>
           </div>
