Change The Links in Home Section

--- a/src/pages/members.html
+++ b/src/pages/members.html
@@ -35,9 +35,6 @@
         <li class="nav-items">
           <a href="/index.html" class="nav-links">Home</a>
         </li>
-        <li class="nav-items">
-          <a href="" class="nav-links">Gallery</a>
-        </li>
 
         <li class="nav-items subs">
           About
@@ -52,11 +49,23 @@
                   >Mission&nbsp;&amp;&nbsp;Vision</a
                 >
               </li>
+
               <li class="nav-items">
-                <a href="/src/pages/resources.html" class="nav-links"
-                  >Resources</a
+                <a href="/src/pages/misvis.html" class="nav-links"
+                  >Objectives</a
                 >
               </li>
+
+              <li class="nav-items">
+                <a href="/src/pages/misvis.html" class="nav-links"
+                  >Core Values</a
+                >
+              </li>
+
+              <li class="nav-items">
+                <a href="/src/pages/misvis.html" class="nav-links">Logo</a>
+              </li>
+
               <li class="nav-items">
                 <a href="/src/pages/officers.html" class="nav-links"
                   >Officers</a
@@ -68,6 +77,38 @@
             </ul>
           </div>
         </li>
+
+        <li class="nav-items subs">
+         Annoucements
+          <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
+          <div class="sub-menu">
+            <ul class="submenu">
+              <li class="nav-items">
+                <a href="/src/pages/history.html" class="nav-links">Events</a>
+              </li>
+              <li class="nav-items">
+                <a href="/src/pages/history.html" class="nav-links">Individual Downloadable Letters</a>
+              </li>
+            
+            </ul>
+          </div>
+        </li>
+
+        <li class="nav-items subs">
+          Resources
+           <i class="fa-solid fa-caret-down arrow prog-arrow"></i>
+           <div class="sub-menu">
+             <ul class="submenu">
+               <li class="nav-items">
+                 <a href="/src/pages/history.html" class="nav-links">Gallery</a>
+               </li>
+               <li class="nav-items">
+                <a href="/src/pages/history.html" class="nav-links">Archive</a>
+              </li>
+             </ul>
+           </div>
+         </li>
+         
 
         <li class="nav-items">
           <a href="/src/pages/contact-us.html" class="nav-links">Contact Us</a>
