Change the Navigation Section

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                  <a href="/src/pages/history.html" class="nav-links">Gallery</a>
                </li>
                <li class="nav-items">
-                <a href="/src/pages/history.html" class="nav-links">Archive</a>
+                <a href="/src/pages/resources.html" class="nav-links">Archive</a>
               </li>
              </ul>
            </div>
