--- a/src/pages/misvis.html
+++ b/src/pages/misvis.html
@@ -53,7 +53,7 @@
               </li>
 
               <li class="nav-items">
-                <a href="/src/pages/misvis.html" class="nav-links"
+                <a href="#Objective" class="nav-links"
                   >Objectives</a
                 >
               </li>
@@ -105,7 +105,7 @@
                  <a href="/src/pages/history.html" class="nav-links">Gallery</a>
                </li>
                <li class="nav-items">
-                <a href="/src/pages/history.html" class="nav-links">Archive</a>
+                <a href="/src/pages/resources.html" class="nav-links">Archive</a>
               </li>
              </ul>
            </div>
@@ -148,7 +148,7 @@
         </div>
       </section>
 
-      <section class="Objectives">
+      <section class="Objectives" id="Objective">
         <div class="core-container">
          
           <div class="main-contents">
